<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clashers Alpha</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="local_service_started">Local Service Started</string>
    <string name="local_service_stopped">Local Service Stopped</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="app_id">503283456395055</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="no_connenction_text">The seems to be no connection to the internet</string>
    <string name="retry_to_connect">Retry</string>
    <string name="refresh_main">Refresh</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    
</resources>